# rocket_rust_api

./: Cargo.toml  Dockerfile  docker-compose.yml  index.html
migrations/2023-04-23-073458_create_users/: up.sql
migrations/2023-04-23-073607_create_roles/: up.sql
migrations/2023-04-23-073610_create_users_roles/: down.sql  up.sql
migrations/2023-10-21-140755_festivals_organisations_tables/: down.sql  up.sql
src/: auth.rs  commands.rs  lib.rs  mail.rs  main.rs  models.rs  repositories.rs  schema.rs
src/models/: event.rs  organisation.rs
src/repositories/: organisations.rs
src/rocket_routes/: authorization.rs  crates.rs  mod.rs  organisation_route.rs  rustaceans.rs
src/tests/: rustaceans.rs
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/common/: mod.rs
