[package]
name = "cr8s"
version = "0.1.0"
edition = "2021"
default-run = "server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc", features = ["json"] }
diesel = { version = "2.0.1", features = ["postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
rocket_sync_db_pools = { version= "0.1.0-rc.3", features = ["diesel_postgres_pool"] }
rocket_db_pools = { version = "0.1.0-rc", features = ["deadpool_redis"] }
serde = {version = "1.0.136", features = ["derive"]}
serde_json = {version = "1.0"}
log = "0.4"
clap = "4.2"
argon2 = "0.5"
rand = "0.8"
[dev-dependencies]
reqwest = { version= "0.11", features = ["json", "blocking"] }
